# nx-evs-2024-demo

./: 1_build_post_processor.sh  2_start_api.sh  CMakeLists.txt  LICENSE  README.md
api/: api.py  index.html
postprocessor-python-example/: README.md  external_postprocessors.json  postprocessor-python-example.py  postprocessor-python-example.spec  requirements.txt
